--- a/Workspace/HomeScreen/main.html
+++ b/Workspace/HomeScreen/main.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="body"> 
-    <section>
+    <section class="main-nav">
         <nav>
             <a class="nav-left-area">
                 <img src="../Logos/main-logo.svg" alt="logo"/>
@@ -33,7 +33,7 @@
             </ul>
             <div class="nav-right-area">
                 
-                <a class="login-btn">
+                <a href="../LoginPage/main.html" class="login-btn">
                     LOG IN
                 </a>
                 <a class="burger-menu-btn"><img src="../Logos/120px-Hamburger_icon_white.svg.png"></a>
@@ -87,19 +87,19 @@
             </button>
 
             <div class="upper-right-area">
-                <a>
+                <a target="_blank" href="https://hoyo.link/59k1BbAd">
                     <img src="../Logos/reddit_logo.svg" alt="logo"/>
                 </a>
-                <a>
+                <a target="_blank" href="https://hoyo.link/20k1B0Ad">
                     <img src="../Logos/facebook_logo.svg" alt="logo"/>
                 </a>
-                <a>
+                <a target="_blank" href="https://hoyo.link/b7k1BCAd">
                     <img src="../Logos/youtube_logo.svg" alt="logo"/>
                 </a>
-                <a>
+                <a target="_blank" href="https://hoyo.link/20k1B0Ad">
                     <img src="../Logos/tiktok_logo.svg" alt="logo"/>
                 </a>
-                <a>
+                <a target="_blank" href="https://hoyo.link/59k1BaAd">
                     <img src="../Logos/instagram_logo.svg" alt="logo"/>
                 </a>
             </div>
@@ -120,6 +120,8 @@
             <div class="copyright">Copyright &#169; ZTristN. All Rights Reserved.</div>
         </div>
     </section>
-    <script src="main.js"></script>
+    
 </body>
+<script src="main.js"></script>
+<script src="../DefaultStyle/main-style.js"></script>
 </html>
