--- a/Workspace/HomeScreen/main.html
+++ b/Workspace/HomeScreen/main.html
@@ -7,7 +7,7 @@
 
     <title>Jenshin ImpekZ</title>
 
-    <link data-n-head="true" rel="icon" type="image/x-icon" href="/Proj_1/Logos/Genshin Impact Veja como a Paimon seria se ela fosse Adulta.webp">
+    <link data-n-head="true" rel="icon" type="image/x-icon" href="../Logos/Genshin Impact Veja como a Paimon seria se ela fosse Adulta.webp">
     <link rel="stylesheet"href="../DefaultStyle/main-style.css">
     <link rel="stylesheet"href="style.css">
     <link rel="stylesheet"href="shooting-stars-style.css">
@@ -26,7 +26,7 @@
                     <div class="menu">
                         <a style="color: white; text-shadow: 0px 0px 20px #D7B332;" id="home" href="#">HOME</a>
                         <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
-                        <a id="maps" href="#">MAPS</a>
+                        <a id="maps" href="../MapScreen/main.html">MAPS</a>
                         <a id="abts" href="#">ABOUT</a>
                     </div>
                 </div>
