--- a/Workspace/MapScreen/main.html
+++ b/Workspace/MapScreen/main.html
@@ -75,6 +75,8 @@ can travel out of everywhere and going trough every edge
 collecting experience level, golds, doing war, and so much more
 <br><br>
 Feel unlike others experience in this world class architecture</div>
+
+        <a href="#first-area"><img class="arrow-next" src="Images/ArrowDown.png"></a>
     </div>
 
     <section id="first-area">
@@ -82,6 +84,7 @@ Feel unlike others experience in this world class architecture</div>
         <div class="each-map-title">Myramid</div>
         <a><img src="../CharacterScreen/Images/myramid.svg"></a>
         <div class="each-map-description">Unlock The Mystery</div>
+
     </div>
     </section>
 
