--- a/Workspace/LoginPage/main.html
+++ b/Workspace/LoginPage/main.html
@@ -20,9 +20,9 @@
             </a>
             <ul>
                 <div>
-                    <div style="margin-left: 8.5%; width: 12%;" id="selector" class="selector"></div>
+                    <div style="margin-left: 0%; width: 0%;" id="selector" class="selector"></div>
                     <div class="menu">
-                        <a style="color: white; text-shadow: 0px 0px 20px #D7B332;" id="home" href="#">HOME</a>
+                        <a id="home" href="#">HOME</a>
                         <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                         <a id="maps" href="../MapScreen/main.html">MAPS</a>
                         <a id="abts" href="#">ABOUT</a>
