--- a/Workspace/CharacterScreen/main.html
+++ b/Workspace/CharacterScreen/main.html
@@ -34,8 +34,11 @@
                 <a id="login-btn" href="../LoginPage/main.html" class="login-btn">
                     LOG IN
                 </a>
-                <a  id="burger-menu-btn" class="burger-menu-btn"><img src="../Logos/120px-Hamburger_icon_white.svg.png"></a>
-            
+                <!-- id="burger-menu-btn" class="burger-menu-btn" -->
+                <!-- <a  id="burger-menu-btn" class="burger-menu-btn"><img src="../Logos/120px-Hamburger_icon_white.svg.png"></a> -->
+                <div id="burger-menu-btn" class="burger-menu-btn">
+                    <div class="menu-btn__burger"></div>
+                </div>
                 <a class="down-btn"><img src="../Logos/download-btn.png"></a>
             </div>
             
@@ -60,7 +63,7 @@
         <div class="bgblur">
             <div class="map-title">Myramid</div>
             <div class="heroes">
-                <div onclick="on()" class="container ctr1">
+                <div id="janeDOvrly" class="container ctr1">
                     <img class="logo" src="Images/wind.svg">
                     <div class="text-hero-desc">Jane D</div>
                     <div class="image1"></div>
