--- a/Workspace/CharacterScreen/main.html
+++ b/Workspace/CharacterScreen/main.html
@@ -20,12 +20,12 @@
             </a>
             <ul>
                 <div>
-                    <div style="margin-left: 30%; width: 24%;"  id="selector" class="selector"></div>
+                    <div style="margin-left: 30%; width: 24%"  id="selector" class="selector"></div>
                     <div class="menu">
                         <a id="home" href="../HomeScreen/main.html">HOME</a>
-                        <a style="color: white; text-shadow: 0px 0px 20px #D7B332;" id="char" href="#">CHARACTERS</a>
+                        <a class="is-activated" id="char" href="#">CHARACTERS</a>
                         <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                        <a id="abts" href="#">ABOUT</a>
+                        <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
             </ul>
@@ -46,7 +46,7 @@
                 <a id="home" href="../HomeScreen/main.html">HOME</a>
                 <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                 <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                <a id="abts" href="#">ABOUT</a>
+                <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
             </div>
         </nav>
         
