--- a/Workspace/HomeScreen/main.html
+++ b/Workspace/HomeScreen/main.html
@@ -22,12 +22,12 @@
             </a>
             <ul>
                 <div>
-                    <div style="margin-left: 8.5%; width: 12%;" id="selector" class="selector"></div>
+                    <div style="margin-left: 30%; width: 24%"  id="selector" class="selector"></div>
                     <div class="menu">
-                        <a style="color: white; text-shadow: 0px 0px 20px #D7B332;" id="home" href="#">HOME</a>
+                        <a class="is-activated" id="home" href="#">HOME</a>
                         <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                         <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                        <a id="abts" href="#">ABOUT</a>
+                        <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
             </ul>
@@ -47,7 +47,7 @@
                 <a id="home" href="../HomeScreen/main.html">HOME</a>
                 <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                 <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                <a id="abts" href="#">ABOUT</a>
+                <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
             </div>
         </nav>
         
@@ -131,6 +131,7 @@
         </div>
     </section>
     
+
 </body>
 <script src="main.js"></script>
 <script src="../DefaultStyle/main-style.js"></script>
