--- a/Workspace/LoginPage/main.html
+++ b/Workspace/LoginPage/main.html
@@ -22,10 +22,10 @@
                 <div>
                     <div style="margin-left: 0%; width: 0%;" id="selector" class="selector"></div>
                     <div class="menu">
-                        <a id="home" href="#">HOME</a>
+                        <a id="home" href="../HomeScreen/main.html">HOME</a>
                         <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                         <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                        <a id="abts" href="#">ABOUT</a>
+                        <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
             </ul>
@@ -42,7 +42,7 @@
                 <a id="home" href="../HomeScreen/main.html">HOME</a>
                 <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                 <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                <a id="abts" href="#">ABOUT</a>
+                <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
             </div>
         </nav>
         
