--- a/Workspace/AboutUsPage/main.html
+++ b/Workspace/AboutUsPage/main.html
@@ -55,12 +55,11 @@
             <div class="platform-box">
                 <div class="platform">Available on Multiple Platform</div>
                 <div class="main-megatron-buttons">
-                    <div>
                         <a target="_blank" href="https://sg-public-api.hoyoverse.com/event/download_porter/link/ys_global/genshinimpactpc/default"><img src="Images/windows.svg"></a>
                         <a target="_blank" href="https://www.playstation.com/en-id/games/genshin-impact/"><img src="Images/ps5.svg"></a>
                         <a target="_blank" href="https://play.google.com/store/apps/details?id=com.miHoYo.GenshinImpact&pli=1"><img src="Images/googleplay.svg"></a>
                         <a target="_blank" href="https://apps.apple.com/app/id1517783697"><img src="Images/apple.svg"></a>
-                    </div>
+                  
                 </div>
             </div>
     </div>
@@ -114,7 +113,55 @@
                 <div class="video">Game Features</div>
                 <img src="Images/right.svg" alt="">
             </div>
+            <div class="feature">
+                <div class="f1">
+                    <div class="f1img"></div>
+                    <div class="f1desc">
+                        <p class="descTitleleft">An Epic Fantasy Adventure</p>
+                        <div class="longslashleft"></div>
+                        <p class="descfullleft">Experience an immersive single-player campaign. As a traveler from another world, you will embark on a journey to reunite with your long-lost sibling and unravel the mysteries of Teyvat, and yourself.</p>
+                    </div>
+                </div>
+                <div class="f2">
+                    <div class="f2desc">
+                        <p class="descTitleright">Your World to Discover</p>
+                        <div class="longslashright"></div>
+                        <p class="descfullright">Fly across the open world, swim through crystal-clear waters, and climb towering mountains. Stray off the beaten path to discover all the hidden secrets of a world full of wonder and mystery.</p>
+                    </div>
+                    <div class="f2img"></div>
+                </div>
+                <div class="f1">
+                    <div class="f3img"></div>
+                    <div class="f1desc">
+                        <p class="descTitleleft">Travel Alone or Better Together</p>
+                        <div class="longslashleft"></div>
+                        <p class="descfullleft">Charge head-on into battles solo, or invite friends to join the fight against dangerous monsters with 4-player cross-play for PS4, iOS, Android, and PC.</p>
+                    </div>
+                </div>
+                <div class="f2">
+                    <div class="f2desc">
+                        <p class="descTitleright">Master the Seven Element</p>
+                        <div class="longslashright"></div>
+                        <p class="descfullright">Not just another mindless hack and slash. Manipulating the various elements is the key to defeating powerful enemies and solving challenging puzzles.</p>
+                    </div>
+                    <div class="f4img"></div>
+                </div>
+                <div class="f1">
+                    <div class="f5img"></div>
+                    <div class="f1desc">
+                        <p class="descTitleleft">Build Your Dream Team</p>
+                        <div class="longslashleft"></div>
+                        <p class="descfullleft">Choose who fights by your side. Build your party from over 20+ characters (with more to come) — each with unique abilities, personalities, and combat styles.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="buttonchar">
+                <img src="Images/left.svg" alt="">
+                <a class="buttonpress" href="../CharacterScreen/main.html">View Character</a>
+                <img src="Images/right.svg" alt="">
+        </div>
+        
     </div>
     <section class="footer">
         <div class="upper-part">
