Update Responsive for Hero-Weapon Update

--- a/Workspace/HomeScreen/main.html
+++ b/Workspace/HomeScreen/main.html
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <div class="maps-introduce">
+    <!-- <div class="maps-introduce">
         <div class="maps-area area-1">
             <a href="../MapScreen/main.html#first-area" class="map-logo">
                 <img src="../CharacterScreen/Images/myramid.svg">
@@ -156,7 +156,7 @@
                 Miramar
             </div>
         </div>
-    </div>
+    </div> -->
 
     <section class="footer">
         <div class="upper-part">
