Update Responsive Character Overlay

--- a/Workspace/AboutUsPage/main.html
+++ b/Workspace/AboutUsPage/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenshin ImpekZ</title>
+    <title>About Us</title>
     <link data-n-head="true" rel="icon" type="image/x-icon" href="../Logos/Genshin Impact Veja como a Paimon seria se ela fosse Adulta.webp">
     
     <link rel="stylesheet" href="style.css">
