--- a/Workspace/CharacterScreen/main.html
+++ b/Workspace/CharacterScreen/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Jenshin ImpekZ</title>
+    <title>Characters</title>
 
     <link data-n-head="true" rel="icon" type="image/x-icon" href="../Logos/Genshin Impact Veja como a Paimon seria se ela fosse Adulta.webp">
     <link rel="stylesheet"href="../DefaultStyle/main-style.css">
@@ -385,7 +385,7 @@
         <div class="close-btn" ></div>
         <div class="desc">
             <div class="title">Nini</div>
-            <div class="hero-desc">An apprentice and herb gatherer at Bubu Pharmacy. "Blessed" by the adepti with a body that cannot die, this petite zombie cannot do anything without first giving herself orders to do it. Nini's memory is like a sieve. Out of necessity, she always carries around a notebook in which she writes anything important that she is sure to forget later. But on her worst days, she even forgets to look at her notebook.</div>
+            <div class="hero-desc">An apprentice and herb gatherer at Bubu Pharmacy. "Blessed" by the adepti with a body that cannot die, this petite zombie cannot do anything without first giving herself orders to do it. Nini's memory is like a sieve.</div>
             <div class="element ice"></div>
         </div>
     </div>
