--- a/Workspace/MapScreen/main.html
+++ b/Workspace/MapScreen/main.html
@@ -160,59 +160,69 @@ Feel unlike others experience in this world class architecture</div>
     </section>
 
     <div id="overlayMyramid" style="display: none" class="overlayMenu">
+        
         <div class="bg-ovly">
-            <div onclick="off('overlayMyramid')" class="close-btn"></div>
-            <div class="title">Myramid</div>
-            <img class="logo-ovly" src="Images/myramid.svg" alt="">
-            <div class="mapdesc">A city of freedom that lies in the northeast of Teyvat. From amongst mountains and wide-open plains, carefree breezes carry the scent of dandelions — a gift from the Anemo God, Barbatos — across Cider Lake to Myramid, which sits on an island in the middle of the lake.</div>
-            <div class="title">Detail</div>
-            <div class="changedesc">
-                <div id="main-BG-Myramid" class ="imagedesc"></div>
-                <div id="main-Tl-Myramid" class="imagetitle"></div>
-                <div id="main-Desc-Myramid" class="descfull"></div>
-            </div>  
+            <div class="bg-ovly2">
+                <div onclick="off('overlayMyramid')" class="close-btn"></div>
+                <div class="title">Myramid</div>
+                <img class="logo-ovly" src="Images/myramid.svg" alt="">
+                <div class="mapdesc">A city of freedom that lies in the northeast of Teyvat. From amongst mountains and wide-open plains, carefree breezes carry the scent of dandelions — a gift from the Anemo God, Barbatos — across Cider Lake to Myramid, which sits on an island in the middle of the lake.</div>
+                <div class="title">Detail</div>
+                <div class="changedesc">
+                    <div id="main-BG-Myramid" class ="imagedesc"></div>
+                    <div id="main-Tl-Myramid" class="imagetitle"></div>
+                    <div id="main-Desc-Myramid" class="descfull"></div>
+                </div>
+            </div>      
         </div>
+        
     </div>
     <div id="overlayEexor" style="display: none" class="overlayMenu">
-        <div class="bg-ovly" >
-            <div onclick="off('overlayEexor')" class="close-btn"></div>
-            <div class="title">Eexor</div>
-            <img class="logo-ovly" src="../CharacterScreen/Images/eexor.svg" alt="">
-            <div class="mapdesc">A bountiful harbor that lies in the east of Teyvat. Mountains stand tall and proud alongside the stone forest, that together with the open plains and lively rivers make up Eexor's bountiful landscape, which shows its unique beauty through each of the four seasons. Just how many gifts from the Geo God lie in wait amongst the rocks of Eexor's mountains?</div>
-            <div class="title">Detail</div>
-            <div class="changedesc">
-                <div id="main-BG-Eexor" class ="imagedesc"></div>
-                <div id="main-Tl-Eexor" class="imagetitle"></div>
-                <div id="main-Desc-Eexor" class="descfull"></div>
-            </div>  
+        <div class="bg-ovly">
+            <div class="bg-ovly2">
+                <div onclick="off('overlayEexor')" class="close-btn"></div>
+                <div class="title">Eexor</div>
+                <img class="logo-ovly" src="../CharacterScreen/Images/eexor.svg" alt="">
+                <div class="mapdesc">A bountiful harbor that lies in the east of Teyvat. Mountains stand tall and proud alongside the stone forest, that together with the open plains and lively rivers make up Eexor's bountiful landscape, which shows its unique beauty through each of the four seasons. Just how many gifts from the Geo God lie in wait amongst the rocks of Eexor's mountains?</div>
+                <div class="title">Detail</div>
+                <div class="changedesc">
+                    <div id="main-BG-Eexor" class ="imagedesc"></div>
+                    <div id="main-Tl-Eexor" class="imagetitle"></div>
+                    <div id="main-Desc-Eexor" class="descfull"></div>
+                </div>  
+            </div>
         </div>
     </div>
     <div id="overlayAsakuro" style="display: none" class="overlayMenu">
-        <div class="bg-ovly" >
-            <div onclick="off('overlayAsakuro')" class="close-btn"></div>
-            <div class="title">Asakuro</div>
-            <img class="logo-ovly" src="../CharacterScreen/Images/asakuro.svg" alt="">
-            <div class="mapdesc">An Isolated Archipelago Far East of Teyvat. Overcome endless thunderstorms and set foot on the islands of red maple and cherry blossoms. On winding shores and towering cliffs, and in forests and mountains full of secrets, witness the Eternity pursued by Her Excellency, the Almighty Narukami Ogosho.</div>
-            <div class="title">Detail</div>
-            <div class="changedesc">
-                <div id="main-BG-Asakuro" class ="imagedesc"></div>
-                <div id="main-Tl-Asakuro" class="imagetitle"></div>
-                <div id="main-Desc-Asakuro" class="descfull"></div>
+        <div class="bg-ovly">
+            <div class="bg-ovly2">
+                <div onclick="off('overlayAsakuro')" class="close-btn"></div>
+                <div class="title">Asakuro</div>
+                <img class="logo-ovly" src="../CharacterScreen/Images/asakuro.svg" alt="">
+                <div class="mapdesc">An Isolated Archipelago Far East of Teyvat. Overcome endless thunderstorms and set foot on the islands of red maple and cherry blossoms. On winding shores and towering cliffs, and in forests and mountains full of secrets, witness the Eternity pursued by Her Excellency, the Almighty Narukami Ogosho.</div>
+                <div class="title">Detail</div>
+                <div class="changedesc">
+                    <div id="main-BG-Asakuro" class ="imagedesc"></div>
+                    <div id="main-Tl-Asakuro" class="imagetitle"></div>
+                    <div id="main-Desc-Asakuro" class="descfull"></div>
+                </div>
             </div>  
         </div>
     </div>
     <div id="overlayMiramar" style="display: none" class="overlayMenu">
-        <div class="bg-ovly" >
-            <div onclick="off('overlayMiramar')" class="close-btn"></div>
-            <div class="title">Miramar</div>
-            <img class="logo-ovly" src="../CharacterScreen/Images/miramar.svg" alt="">
-            <div class="mapdesc">The city of scholars located in the west-central part of Teyvat. A fantastical nation of both lush rainforest and barren desert, where countless fruits of wisdom grow and are buried. Whether Travelers travel from afar through the forest to reach the academy city or delve deep into the desert to discover the historical ruins of the red desert, a wealth of valuable knowledge awaits them here.</div>
-            <div class="title">Detail</div>
-            <div class="changedesc">
-                <div id="main-BG-Miramar" class ="imagedesc"></div>
-                <div id="main-Tl-Miramar" class="imagetitle"></div>
-                <div id="main-Desc-Miramar" class="descfull"></div>
-            </div>  
+        <div class="bg-ovly">
+            <div class="bg-ovly2">
+                <div onclick="off('overlayMiramar')" class="close-btn"></div>
+                <div class="title">Miramar</div>
+                <img class="logo-ovly" src="../CharacterScreen/Images/miramar.svg" alt="">
+                <div class="mapdesc">The city of scholars located in the west-central part of Teyvat. A fantastical nation of both lush rainforest and barren desert, where countless fruits of wisdom grow and are buried. Whether Travelers travel from afar through the forest to reach the academy city or delve deep into the desert to discover the historical ruins of the red desert, a wealth of valuable knowledge awaits them here.</div>
+                <div class="title">Detail</div>
+                <div class="changedesc">
+                    <div id="main-BG-Miramar" class ="imagedesc"></div>
+                    <div id="main-Tl-Miramar" class="imagetitle"></div>
+                    <div id="main-Desc-Miramar" class="descfull"></div>
+                </div>  
+            </div>
         </div>
     </div>
 </body>
