--- a/Workspace/CharacterScreen/main.html
+++ b/Workspace/CharacterScreen/main.html
@@ -32,7 +32,7 @@
             <div class="nav-right-area">
                 
                 <a id="login-btn" href="../LoginPage/main.html" class="login-btn">
-                    LOG IN
+                    SIGN UP
                 </a>
                 <!-- id="burger-menu-btn" class="burger-menu-btn" -->
                 <!-- <a  id="burger-menu-btn" class="burger-menu-btn"><img src="../Logos/120px-Hamburger_icon_white.svg.png"></a> -->
