--- a/Workspace/HomeScreen/main.html
+++ b/Workspace/HomeScreen/main.html
@@ -32,7 +32,7 @@
             </ul>
             <div class="nav-right-area">
                 <a id="login-btn" href="../LoginPage/main.html" class="login-btn">
-                    LOG IN
+                    SIGN UP
                 </a>
                 <div id="burger-menu-btn" class="burger-menu-btn">
                     <div class="menu-btn__burger"></div>
@@ -82,7 +82,7 @@
     <div class="after-main">
         <div class="after-main-update-header">
             <img src="../AboutUsPage/Images/left.svg" alt="">
-            <div>Game Features</div>
+            <div>Update</div>
             <img src="../AboutUsPage/Images/right.svg" alt="">
         </div>
         <div class="changing-area">
@@ -204,6 +204,6 @@
     
 
 </body>
-<script src="main.js"></script>
+<script type="module" src="main.js"></script>
 <script src="../DefaultStyle/main-style.js"></script>
 </html>
