--- a/Workspace/LoginPage/main.html
+++ b/Workspace/LoginPage/main.html
@@ -140,6 +140,6 @@
     </section>
     
 </body>
-<script src="main.js"></script>
+<script type="module" src="main.js"></script>
 <script src="../DefaultStyle/main-style.js"></script>
 </html>
