--- a/Workspace/MapScreen/main.html
+++ b/Workspace/MapScreen/main.html
@@ -30,7 +30,7 @@
             <div class="nav-right-area">
                 
                 <a id="login-btn" href="../LoginPage/main.html" class="login-btn">
-                    LOG IN
+                    SIGN UP
                 </a>
                 <div id="burger-menu-btn" class="burger-menu-btn">
                     <div class="menu-btn__burger"></div>
