Update NavBar, Hero Overlay, Map Overlay

--- a/Workspace/AboutUsPage/main.html
+++ b/Workspace/AboutUsPage/main.html
@@ -20,9 +20,9 @@
                 <div>
                     <div style="margin-left: 84%; width: 15%" id="selector" class="selector"></div>
                     <div class="menu">
-                        <a id="home" href="../HomeScreen/main.html">HOME</a>
-                        <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
-                        <a id="maps" href="../MapScreen/main.html">MAPS</a>
+                        <a class="isnt-activated" id="home" href="../HomeScreen/main.html">HOME</a>
+                        <a class="isnt-activated" id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
+                        <a class="isnt-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
                         <a class="is-activated" id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
