--- a/Workspace/HomeScreen/main.html
+++ b/Workspace/HomeScreen/main.html
@@ -24,9 +24,9 @@
                     <div style="margin-left: 30%; width: 24%"  id="selector" class="selector"></div>
                     <div class="menu">
                         <a class="is-activated" id="home" href="#">HOME</a>
-                        <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
-                        <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                        <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
+                        <a class="isnt-activated" id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
+                        <a class="isnt-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
+                        <a class="isnt-activated" id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
             </ul>
