--- a/Workspace/MapScreen/main.html
+++ b/Workspace/MapScreen/main.html
@@ -20,10 +20,10 @@
                 <div>
                     <div style="margin-left: 64.3%; width: 10%"  id="selector" class="selector"></div>
                     <div class="menu">
-                        <a id="home" href="../HomeScreen/main.html">HOME</a>
-                        <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
+                        <a class="isnt-activated" id="home" href="../HomeScreen/main.html">HOME</a>
+                        <a class="isnt-activated" id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                         <a class="is-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
-                        <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
+                        <a class="isnt-activated" id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
             </ul>
