--- a/Workspace/LoginPage/main.html
+++ b/Workspace/LoginPage/main.html
@@ -22,10 +22,10 @@
                 <div>
                     <div style="margin-left: 0%; width: 0%;" id="selector" class="selector"></div>
                     <div class="menu">
-                        <a id="home" href="../HomeScreen/main.html">HOME</a>
-                        <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
-                        <a id="maps" href="../MapScreen/main.html">MAPS</a>
-                        <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
+                        <a class="isnt-activated" id="home" href="../HomeScreen/main.html">HOME</a>
+                        <a class="isnt-activated" id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
+                        <a class="isnt-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
+                        <a class="isnt-activated" id="abts" href="../AboutUsPage/main.html">ABOUT</a>
                     </div>
                 </div>
             </ul>
