--- a/Workspace/HomeScreen/index.html
+++ b/Workspace/HomeScreen/index.html
@@ -42,7 +42,7 @@
             </div>
             
             <div id="other-nav" class="other-nav">
-                <a class="other-nav-activated" id="home" href="../HomeScreen/main.html">HOME</a>
+                <a class="other-nav-activated" id="home" href="../HomeScreen/index.html">HOME</a>
                 <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                 <a id="maps" href="../MapScreen/main.html">MAPS</a>
                 <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
