--- a/Workspace/LoginPage/main.html
+++ b/Workspace/LoginPage/main.html
@@ -22,7 +22,7 @@
                 <div>
                     <div style="margin-left: 0%; width: 0%;" id="selector" class="selector"></div>
                     <div class="menu">
-                        <a class="isnt-activated" id="home" href="../HomeScreen/main.html">HOME</a>
+                        <a class="isnt-activated" id="home" href="../HomeScreen/index.html">HOME</a>
                         <a class="isnt-activated" id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                         <a class="isnt-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
                         <a class="isnt-activated" id="abts" href="../AboutUsPage/main.html">ABOUT</a>
@@ -39,7 +39,7 @@
             </div>
             
             <div id="other-nav" class="other-nav">
-                <a id="home" href="../HomeScreen/main.html">HOME</a>
+                <a id="home" href="../HomeScreen/index.html">HOME</a>
                 <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                 <a id="maps" href="../MapScreen/main.html">MAPS</a>
                 <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
