--- a/Workspace/MapScreen/main.html
+++ b/Workspace/MapScreen/main.html
@@ -20,7 +20,7 @@
                 <div>
                     <div style="margin-left: 64.3%; width: 10%"  id="selector" class="selector"></div>
                     <div class="menu">
-                        <a class="isnt-activated" id="home" href="../HomeScreen/index.html">HOME</a>
+                        <a class="isnt-activated" id="home" href="../../index.html">HOME</a>
                         <a class="isnt-activated" id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                         <a class="is-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
                         <a class="isnt-activated" id="abts" href="../AboutUsPage/main.html">ABOUT</a>
@@ -39,7 +39,7 @@
             </div>
             
             <div id="other-nav" class="other-nav">
-                <a id="home" href="../HomeScreen/index.html">HOME</a>
+                <a id="home" href="../../index.html">HOME</a>
                 <a id="char" href="../CharacterScreen/main.html">CHARACTERS</a>
                 <a class="other-nav-activated" id="maps" href="../MapScreen/main.html">MAPS</a>
                 <a id="abts" href="../AboutUsPage/main.html">ABOUT</a>
